# Noiseground

./: .gitignore  CMakeLists.txt  DatabaseInteraction.h  README.md  dbInteraction.cpp
App/HttpClient/: CMakeLists.txt  main.cpp
App/HttpClient/httpClient/: clientTypes.h  deserializer.cpp  deserializer.h  httpClient.cpp  httpClient.h  serializer.cpp  serializer.h  sound.h
App/HttpClient/httpClientManager/: httpClientManager.cpp  httpClientManager.h
App/HttpServer/: CMakeLists.txt  main.cpp
App/HttpServer/data/: users.txt
App/HttpServer/data/sounds_standard/: Sound_22378.flac  Sound_23375.flac
App/HttpServer/httpServer/: header.h  httpConnection.cpp  httpConnection.h  httpServer.cpp  httpServer.h  mime_types.cpp  mime_types.h  parser.cpp  parser.h  reply.cpp  reply.h  request.h  router.cpp  router.h  serverTypes.h
App/HttpServer/httpServer/generalTypes/: sound.h  user.h
App/HttpServer/httpServer/managers/: serializer.cpp  serializer.h  sound.h  soundManager.cpp  soundManager.h  userManager.cpp  userManager.h
App/HttpServer/httpServer/models/: soundModel.cpp  soundModel.h  userModel.cpp  userModel.h
HttpClient/: CMakeLists.txt
HttpClient/httpClient/: httpClient.cpp  httpClient.h  serializer.cpp
HttpServer/: CMakeLists.txt
HttpServer/httpServer/: parser.cpp  parser.h
HttpServer/httpServer/managers/: serializer.h
HttpServer/httpServer/models/: userModel.h
NewSound/: CMakeLists.txt
NewSound/headers/: CMakeLists.txt  Sounds.h
NewSound/src/: CMakeLists.txt  Sound.cpp  execute.cpp
Sound/: CMakeLists.txt
Sound/headers/: Preset.h  UserSound.h
Sound/src/: Sound.cpp
Sound/tests/: tests.cpp
UI/: CMakeLists.txt
UI/include/: AuthDialog.h  Core.h  MainWindow.h  PlayPauseButton.h  SignUpDialog.h  SoundBox.h  UIManager.h  UserWindow.h
UI/src/: AuthDialog.cpp  Core.cpp  MainWindow.cpp  PlayPauseButton.cpp  SignUpDialog.cpp  SoundBox.cpp  UIManager.cpp  UserWindow.cpp  main.cpp
UI/style/: style.css  style.qss
UI/tests/: test.cpp
common/: Core.cpp  Core.h  main.cpp
headers/: CMakeLists.txt  Preset.h  Sound.h  Sounds.h  User.h  UserSound.h
include/: AuthDialog.h  Core.h  MainWindow.h  PlayPauseButton.h  SignUpDialog.h  SoundBox.h  UIManager.h  UserWindow.h  auth_dialog.h  mainwindow.h  sign_up_dialog.h  userwindow.h
src/: AuthDialog.cpp  CMakeLists.txt  Core.cpp  MainWindow.cpp  PlayPauseButton.cpp  SignUpDialog.cpp  Sound.cpp  SoundBox.cpp  UIManager.cpp  UserWindow.cpp  auth_dialog.cpp  execute.cpp  main.cpp  mainwindow.cpp  sign_up_dialog.cpp  userwindow.cpp
tests/: CMakeLists.txt  test.cpp  tests.cpp
